# rust-evm-bench

./: Cargo.toml  README.md  erc20.bench.input.json  sample.sol  uniswap.bench.input.json
go-evm/: go.mod  go.sum  main.go
go-evm/goevm_real_txs/: main.go
modified-erc20/: usdt.abi  usdt.sol
resources/: Dockerfile.realtx
revm/: Cargo.toml
revm/src/: main.rs
rust-evm/: Cargo.toml
rust-evm/src/: main.rs
src/: main.rs
