[package]
name = "revm-bench"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
microbench = "0.5.0"
revm = { git = "https://github.com/bluealloy/revm.git", branch="main" }
revm-statetest-types  = { git = "https://github.com/bluealloy/revm.git", branch="main" }
eyre = "0.6.12"
hex = { version = "0.4.3", features = ["serde"] }
serde_json = "1.0.139"
serde = { version = "1.0.218", features = ["serde_derive"] }
